# 2dShooter

./: .clang-format  .gitignore  CMakeLists.txt  build.bat  buildd.bat  run.bat  rund.bat  setup.bat  setup.sh
src/: main.cpp
src/ECS/: component.h  componentManager.h  entity.h  entityManager.h  factory.h  world.h
src/ECS/Components/: Transform.h  sprite.h  tags.h
src/ECS/Systems/: InputSystem.h  RenderSystem.h
src/Logger/: logger.cpp  logger.h
src/Math/: Vec2.h
src/Utils/: texture.cpp  texture.h
